--- a/ficha.html
+++ b/ficha.html
@@ -28,7 +28,24 @@
   .badges { display: flex; justify-content: center; gap: 5px; flex-wrap: wrap; margin-top: 8px; }
   .badge { font-size: 0.75rem; padding: 2px 8px; border-radius: 4px; background: #222; border: 1px solid #444; color: #ccc; }
   .b-lvl { color: white; border-color: white; font-weight: bold; }
-  .b-cls { color: var(--primary); border-color: var(--primary); }
+
+  /* SHIKIGAMI TOKENS (NOVO) */
+  .shiki-container {
+    display: flex; justify-content: center; gap: 8px; margin-top: 15px; flex-wrap: wrap;
+    border-top: 1px solid #222; padding-top: 15px;
+  }
+  .shiki-token {
+    width: 40px; height: 40px; border-radius: 50%; border: 2px solid var(--energy);
+    background: #000; object-fit: cover; cursor: pointer; transition: transform 0.2s;
+  }
+  .shiki-token:hover { transform: scale(1.15); box-shadow: 0 0 10px var(--energy); }
+  .shiki-add {
+    width: 40px; height: 40px; border-radius: 50%; border: 2px dashed #444;
+    display: flex; align-items: center; justify-content: center; color: #555;
+    cursor: pointer; font-size: 1.2rem; transition: 0.2s;
+  }
+  .shiki-add:hover { border-color: var(--energy); color: var(--energy); }
+
 
   /* EDIÇÃO INLINE */
   .editable { 
@@ -96,14 +113,6 @@
   .sk-btn.active-t { background: rgba(88, 232, 218, 0.2); border-color: var(--energy); color: var(--energy); }
   .sk-btn.active-m { background: rgba(230, 57, 70, 0.2); border-color: var(--primary); color: var(--primary); }
 
-  /* Botão Invocações */
-  .btn-summon {
-    background: transparent; border: 1px solid var(--integridade); color: var(--integridade);
-    width: 100%; padding: 10px; font-size: 1rem; cursor: pointer; border-radius: 5px;
-    font-weight: bold; transition: 0.2s; display: flex; align-items: center; justify-content: center; gap: 10px;
-  }
-  .btn-summon:hover { background: var(--integridade); color: #000; }
-
   /* FAB e MODAL */
   .fab-config { position: fixed; bottom: 20px; right: 20px; background: #222; color: white; border: 2px solid #555; width: 50px; height: 50px; border-radius: 50%; font-size: 1.5rem; cursor: pointer; box-shadow: 0 4px 15px rgba(0,0,0,0.6); z-index: 100; transition: 0.2s; }
   .fab-config:hover { background: var(--primary); border-color: var(--primary); }
@@ -121,7 +130,10 @@
     <div class="card char-header">
       <img id="charImg" class="char-img" src="">
       <h2 class="char-name"><span class="editable" id="nomeDisplay" onclick="editarCampo(this, 'nome', 'text')">...</span></h2>
+      
       <div id="badges" class="badges"></div>
+
+      <div id="shikiTokens" class="shiki-container"></div>
     </div>
 
     <div class="card">
@@ -133,8 +145,7 @@
       <div id="statsArea"></div>
     </div>
     
-    <button class="btn-summon" onclick="irParaShikigamis()">🐺 Invocações</button>
-    <button class="btn-mini" style="width:100%; padding:10px; font-size:1rem; margin-top:10px;" onclick="window.location='index.html'">Voltar</button>
+    <button class="btn-mini" style="width:100%; padding:10px; font-size:1rem;" onclick="window.location='index.html'">Voltar</button>
   </div>
 
   <div class="content-area">
@@ -221,6 +232,25 @@ function renderFicha() {
     <span class="badge b-lvl">NVL <span class="editable" onclick="editarCampo(this, 'nivel', 'number')">${f.nivel||1}</span></span>
     <span class="badge b-cls">${f.classe || 'Aventureiro'}</span>
   `;
+
+  // --- RENDERIZA TOKENS DE SHIKIGAMI ---
+  const shikiArea = document.getElementById('shikiTokens');
+  shikiArea.innerHTML = "";
+  
+  if(f.shikigamis && f.shikigamis.length > 0) {
+    f.shikigamis.forEach(s => {
+        // Se não tiver imagem, usa um placeholder colorido
+        const imgUrl = s.imagem || `https://via.placeholder.com/40/222/58E8DA?text=${s.nome.charAt(0)}`;
+        shikiArea.innerHTML += `<img src="${imgUrl}" class="shiki-token" title="${s.nome}" onclick="irParaShikigamis()">`;
+    });
+    // Adiciona o botão + no final da lista se tiver shikigamis
+    if(f.shikigamis.length < 20) {
+        shikiArea.innerHTML += `<div class="shiki-add" onclick="irParaShikigamis()" title="Nova Invocação">+</div>`;
+    }
+  } else {
+    // Se não tiver nenhum, mostra só o +
+    shikiArea.innerHTML = `<div class="shiki-add" onclick="irParaShikigamis()" title="Criar Invocação">+</div>`;
+  }
 
   // Atributos
   const areaAttr = document.getElementById('atributosArea');
@@ -371,7 +401,6 @@ window.upStat = async (key, val) => {
 
 // Navegação para Shikigamis
 window.irParaShikigamis = () => {
-  // Passa o ID do personagem principal
   window.location = `shikigamis.html?charId=${id}`;
 };
 
