--- a/index.html
+++ b/index.html
@@ -21,18 +21,16 @@
   button.outline { background: transparent; border: 2px solid var(--primary); color: var(--primary); }
   button.outline:hover { background: var(--primary); color: white; }
 
-  /* ITEM DA LISTA ATUALIZADO */
+  /* Lista de Personagens */
   .ficha-item { display: flex; align-items: center; background: #252525; padding: 10px 15px; margin-bottom: 10px; border-radius: 8px; border-left: 4px solid var(--primary); transition: transform 0.2s; position: relative; }
   .ficha-item:hover { transform: translateX(5px); background: #2a2a2a; }
   
-  /* Área clicável que abre a ficha */
   .ficha-content { display: flex; align-items: center; flex-grow: 1; cursor: pointer; }
-  
   .ficha-item img { width: 60px; height: 60px; border-radius: 50%; object-fit: cover; margin-right: 15px; border: 2px solid var(--primary); }
   .ficha-info { flex-grow: 1; }
   .ficha-info h3 { margin: 0; font-size: 1.1rem; }
   
-  /* Botão de Lixeira */
+  /* Botão Lixeira */
   .btn-trash { 
     background: transparent; border: none; padding: 10px; width: auto; margin: 0 0 0 10px; 
     color: #555; font-size: 1.2rem; cursor: pointer; z-index: 10;
@@ -40,6 +38,12 @@
   .btn-trash:hover { color: #e63946; background: transparent; box-shadow: none; transform: scale(1.1); }
   
   .hidden { display: none; }
+  
+  /* Botão Mestre Especial */
+  .btn-gm-access {
+    border-color: #D073FA; color: #D073FA; margin-top: 10px;
+  }
+  .btn-gm-access:hover { background: #D073FA; color: #000; box-shadow: 0 0 15px #D073FA; }
 </style>
 </head>
 <body>
@@ -58,8 +62,10 @@
   <div id="userArea" class="card hidden">
     <p>Conectado como: <strong id="userEmail" style="color:var(--primary)"></strong></p>
     <a href="create.html"><button>+ Novo Personagem</button></a>
-    <a href="mestre.html"><button class="outline" style="margin-top:10px;">🛡️ Escudo do Mestre</button></a>
-    <button id="btnLogout" class="outline" style="border-color:#555; color:#888;">Sair</button>
+    
+    <div id="gmArea"></div>
+
+    <button id="btnLogout" class="outline" style="border-color:#555; color:#888; margin-top:10px;">Sair</button>
   </div>
 
   <div id="lista"></div>
@@ -71,6 +77,7 @@ import {
   onAuthStateChanged, signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut 
 } from "./firebase.js";
 
+const MESTRE_EMAIL = "grisskos@fake.com";
 const emailInput = document.getElementById('emailInput');
 const passInput = document.getElementById('passInput');
 
@@ -80,6 +87,14 @@ onAuthStateChanged(auth, user => {
     document.getElementById("loginBox").classList.add("hidden");
     document.getElementById("userArea").classList.remove("hidden");
     document.getElementById("userEmail").innerText = user.email.replace("@fake.com", "");
+    
+    // VERIFICA SE É O MESTRE
+    const gmArea = document.getElementById("gmArea");
+    gmArea.innerHTML = ""; // Limpa
+    if (user.email === MESTRE_EMAIL) {
+      gmArea.innerHTML = `<a href="mestre.html"><button class="outline btn-gm-access">🛡️ Escudo do Mestre</button></a>`;
+    }
+
     carregarFichas(user.uid);
   } else {
     document.getElementById("loginBox").classList.remove("hidden");
@@ -123,12 +138,10 @@ function carregarFichas(uid) {
 // Função Global de Deletar
 window.deletar = async (event, id, nome) => {
   event.stopPropagation(); // IMPEDE QUE O CLIQUE ABRA A FICHA
-  
   const confirmacao = prompt(`Para apagar ${nome} permanentemente, digite 'DELETAR':`);
   if (confirmacao === "DELETAR") {
     try {
       await deleteDoc(doc(db, "fichas", id));
-      // Não precisa de alert nem reload, o onSnapshot atualiza a lista sozinho!
     } catch(e) {
       alert("Erro ao deletar: " + e.message);
     }
